# maga

./: .gitignore  CMakeLists.txt  README.md
AutomaticSizing/incl/CircuitInformation/: CircuitInformation.h
AutomaticSizing/src/CircuitInformation/: CircuitInformation.cpp
Control/: CMakeLists.txt
Control/incl/: AbstractCircuitSource.h  Control.h
Control/incl/Analysis/: AbstractAnalysis.h  Analysis.h  AnalysisFactory.h  CircuitAnalysis.h  FlatCircuitAnalysis.h
Control/incl/FactoryMap/: AnalysesFactoryMap.h  FactoryBase.h  FactoryMap.h  FactoryMapKey.h
Control/incl/File/: File.h  InputFile.h  OutputFile.h  TokenFile.h  XmlInputFile.h
Control/incl/FileFormat/: FileFormatBase.h  InputFileFormat.h  OutputFileFormat.h
Control/incl/Options/: CircuitReadInOptions.h  GlobalOptions.h  HspiceOptions.h  OptionsBase.h
Control/script/: acst.sh
Control/src/: AbstractCircuitSource.cpp  Control.cpp  FileSystemPath.cpp
Control/src/Analysis/: AbstractAnalysis.cpp  Analysis.impl  AnalysisFactory.cpp  CircuitAnalysis.impl  FlatCircuitAnalysis.impl
Control/src/FactoryMap/: AnalysesFactoryMap.cpp  FactoryBase.cpp  FactoryMapKey.cpp
Control/src/File/: File.cpp  InputFile.cpp  OutputFile.cpp  TokenFile.cpp  XmlInputFile.cpp
Control/src/FileFormat/: FileFormatBase.impl  InputFileFormat.cpp  OutputFileFormat.cpp
Control/src/Options/: CircuitReadInOptions.cpp  GlobalOptions.cpp  HspiceOptions.cpp  OptionsBase.cpp
Core/incl/Circuit/: Circuit.h
Core/incl/Common/: Name.h  Object.h
InputFileExamples/Partitioning/: cascodedSymmetricalCMOSOTA.xml  command.sh
InputFileExamples/RuleGeneration/: command.sh
InputFileExamples/StructureRecognition/: command.sh  output.xml
InputFileExamples/Synthesis/: command.sh
Partitioning/incl/: Partitioning.h
Partitioning/src/: Partitioning.cpp
StructRec/src/: LocalOptions.cpp
Synthesis/incl/: TopoGen.h  TopologyLibraryGeneration.h
Synthesis/src/: CMakeLists.txt  LocalOptions.cpp  LocalOptionsTopologyLibraryGeneration.cpp  Synthesis.cpp  SynthesisFactory.cpp  TopoGen.cpp  TopologyLibraryGeneration.cpp
cmake/modules/: FindGecode.cmake
docs/: Doxyfile
examples/Partitioning/: input.hspice  input_0.hspice  input_2_three_stage_single_output_op_amp_1_1.ckt  output.xml  output_1.xml  output_2_three_stage_single_output_op_amp_1_1.xml  output_3_three_stage_single_output_op_amp_1_20.xml
examples/StructureRecognition/: input.ckt  input_1.ckt  input_3_three_stage_single_output_op_amp_1_20.ckt  output.xml  output_1.xml  output_2_three_stage_single_output_op_amp_1_1.xml  output_3_three_stage_single_output_op_amp_1_20.xml
scripts/: check_undefinedparts.py  repair_undefinedparts.py
src/pymaga/: AcstUtility.cpp  AcstUtility.h  CMakeLists.txt  bindings.cpp
src/pymaga/examples/: structrec.py  synthesis_all.py  synthesis_loads.py  test.py  test_utils.py  topology_gen.py  utils.py  write_partitioning_result.py  write_structrec_result.py
tests/: CMakeLists.txt  cmd_automaticsizing.cpp  cmd_partitioning.cpp  cmd_structure_recognition.cpp  cmd_synthesis_fbb.cpp  cmd_toplibgen.cpp  common_test.cpp  fn_test.cpp  gtest_basic.cpp  synthesis_small_library.cpp
tests/common/: CMakeLists.txt  object.cpp
tests/control_cmd/: AnalysesFactory.cpp  CMakeLists.txt  globaloptions.cpp
(+705 files in other folders)
